[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
axum = "0.7.5"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
serde_json = "1.0.95"
